--- a/build.gradle
+++ b/build.gradle
@@ -4,25 +4,25 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven {
             url 'https://dl.bintray.com/armcha/maven'
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:7.0.4'
         
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.1'
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
